testdata/baselines/reference/submodule/conformance/namespaceAssignmentToRequireAlias.errors.txt
bug40140.js(1,19): error TS2307: Cannot find module 'untyped' or its corresponding type declarations.


==== bug40140.js (1 errors) ====
    const u = require('untyped');
                      ~~~~~~~~~
!!! error TS2307: Cannot find module 'untyped' or its corresponding type declarations.
    u.assignment.nested = true
    u.noError()
    
    
==== node_modules/untyped/index.js (0 errors) ====
    module.exports = {}
    